Bloque hero terminado

--- a/front/index.html
+++ b/front/index.html
@@ -29,28 +29,28 @@
             <!-- Info Carreras -->
             <div class="section__info col">
               <div class="row align-items-center">
-                <div class="col">
+                <div class="col-6 col-md-8">
                   <img
-                    class="hero__img float-end"
+                    class="hero__img__carrera float-end"
                     src="../public/assets/images/icon-carrera.svg"
                     alt="Icono Carreras"
                   />
                 </div>
-                <div class="col-md-4">
+                <div class="col-6 col-md-4">
                   <p class="p__number">100+</p>
                   <p class="p__text">Carreras</p>
                 </div>
               </div>
               <!-- Info Facultades -->
               <div class="row align-items-center mt-2 mt-md-4">
-                <div class="col">
+                <div class="col-6 col-md-8">
                   <img
-                    class="float-end"
+                    class="hero__img__facultades float-end"
                     src="../public/assets/images/Icon-facultades.svg"
                     alt="Icono Carreras"
                   />
                 </div>
-                <div class="col-md-4">
+                <div class="col-6 col-md-4">
                   <p class="p__number">13</p>
                   <p class="p__text">Facultades</p>
                 </div>
