--- a/front/index.html
+++ b/front/index.html
@@ -59,15 +59,115 @@
           </div>
         </div>
       </section>
+      <section class="section__datatable">
+        <div class="row">
+          <div class="col">
+            <table
+              id="example"
+              class="display table table-hover"
+              style="width: 100%"
+            >
+              <thead>
+                <tr>
+                  <th class="">Actividad Curricular</th>
+                  <th>Carácter</th>
+                  <th>Contenidos mínimos de la actividad curricular</th>
+                  <th>Área</th>
+                  <th>Campo</th>
+                  <th>Carrera</th>
+                  <th>Unidad Académica</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <td>Química Aplicada</td>
+                  <td>Obligatoria</td>
+                  <td>
+                    Modelos químicos de sistemas en equilibrio: concepto
+                    cinético y termodinámico. Equilibrio ácido-base. El agua y
+                    el comportamiento ácido-base de sus soluciones. Soluciones
+                    reguladoras de pH. Equilibrio redox. Electroquímica.
+                    Procesos redox en medios naturales. Compuestos de
+                    coordinación en sistemas naturales. Quelatos. Acuocomplejos.
+                    Equilibrio de iones complejos. Solubilidad. Equilibrios de
+                    precipitación. Procesos de precipitación en sistemas
+                    naturales. Las interacciones químicas en la naturaleza.
+                    Equilibrios múltiples. Operaciones básicas del método
+                    analítico. Análisis cuantitativos de elementos y compuestos
+                    de interés agronómico. Gravimetría, volumetría. Métodos
+                    instrumentales: conductimetría, potenciometría,
+                    espectrocopía molecular y atómica.
+                  </td>
+                  <td>Química</td>
+                  <td>Matemática, Ciencias naturales y del ambiente</td>
+                  <td>Agronomía</td>
+                  <td>Facultad de Agronomía</td>
+                </tr>
+                <tr>
+                  <td>Química Aplicada</td>
+                  <td>Obligatoria</td>
+                  <td>
+                    Modelos químicos de sistemas en equilibrio: concepto
+                    cinético y termodinámico. Equilibrio ácido-base. El agua y
+                    el comportamiento ácido-base de sus soluciones. Soluciones
+                    reguladoras de pH. Equilibrio redox. Electroquímica.
+                    Procesos redox en medios naturales. Compuestos de
+                    coordinación en sistemas naturales. Quelatos. Acuocomplejos.
+                    Equilibrio de iones complejos. Solubilidad. Equilibrios de
+                    precipitación. Procesos de precipitación en sistemas
+                    naturales. Las interacciones químicas en la naturaleza.
+                    Equilibrios múltiples. Operaciones básicas del método
+                    analítico. Análisis cuantitativos de elementos y compuestos
+                    de interés agronómico. Gravimetría, volumetría. Métodos
+                    instrumentales: conductimetría, potenciometría,
+                    espectrocopía molecular y atómica.
+                  </td>
+                  <td>Química</td>
+                  <td>Matemática, Ciencias naturales y del ambiente</td>
+                  <td>Agronomía</td>
+                  <td>Facultad de Agronomía</td>
+                </tr>
+              </tbody>
+            </table>
+          </div>
+        </div>
+      </section>
     </main>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.1.3/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.2.7/pdfmake.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.2.7/vfs_fonts.js"></script>
     <script src="https://cdn.datatables.net/v/bs5/jq-3.6.0/jszip-2.5.0/dt-1.13.4/af-2.5.3/b-2.3.6/b-colvis-2.3.6/b-html5-2.3.6/b-print-2.3.6/cr-1.6.2/date-1.4.1/fc-4.2.2/fh-3.3.2/r-2.4.1/rg-1.3.1/sb-1.4.2/sp-2.1.2/sl-1.6.2/sr-1.2.2/datatables.min.js"></script>
-    <script>
+    <!-- <script>
       $(document).ready(function () {
-        $("#example").DataTable();
+        $("#example").DataTable({
+          initComplete: function () {
+            this.api()
+              .columns()
+              .every(function () {
+                var column = this;
+                var select = $('<select><option value=""></option></select>')
+                  .appendTo($(column.footer()).empty())
+                  .on("change", function () {
+                    var val = $.fn.dataTable.util.escapeRegex($(this).val());
+
+                    column
+                      .search(val ? "^" + val + "$" : "", true, false)
+                      .draw();
+                  });
+
+                column
+                  .data()
+                  .unique()
+                  .sort()
+                  .each(function (d, j) {
+                    select.append(
+                      '<option value="' + d + '">' + d + "</option>"
+                    );
+                  });
+              });
+          },
+        });
       });
-    </script>
+    </script> -->
   </body>
 </html>
