se agrega tfoot

--- a/front/index.html
+++ b/front/index.html
@@ -127,6 +127,17 @@
                   <td>Agronomía</td>
                   <td>Facultad de Agronomía</td>
                 </tr>
+                <tfoot>
+                  <tr>
+                  <th class="">Actividad Curricular</th>
+                  <th>Carácter</th>
+                  <th>Contenidos mínimos de la actividad curricular</th>
+                  <th>Área</th>
+                  <th>Campo</th>
+                  <th>Carrera</th>
+                  <th>Unidad Académica</th>
+                </tr>
+                </tfoot>
               </tbody>
             </table>
           </div>
