se agrea botones de descarga

--- a/front/index.html
+++ b/front/index.html
@@ -62,6 +62,16 @@
       <section class="section__datatable">
         <div class="row">
           <div class="col">
+            <div class="row">
+              <button class="btn__download btn">Descargar búsqueda EXCEL</button>
+            </div>
+            <div class="row">
+              <button class="btn__download btn__download-pdf btn  mt-2">Descargar búsqueda PDF</button>
+            </div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col">
             <table
               id="example"
               class="display table table-hover"
